# zarr-datafusion-search

./: .gitignore  Cargo.toml  DEVELOP.md  README.md  generate_data.py  pyproject.toml
.github/workflows/: python-ci.yml  rust-ci.yml
python/: Cargo.toml  README.md  pyproject.toml
python/python/zarr_datafusion_search/: __init__.py  _rust.pyi
python/scripts/: generate_icechunk_data.py
python/src/: lib.rs  table.rs
python/tests/: test_datafusion.py
scripts/: generate_data.py  generate_icechunk.py
src/: error.rs  file_format.rs  lib.rs  schema.rs  source.rs  table_provider.rs  test_load_zarrs.rs  zarr_array.rs
src/testing/: basic_table_provider.rs  iter_group.rs  load_into_arrow.rs  load_zarrs.rs  mod.rs
