[package]
name = "zarr-datafusion-search"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "56.2.0" }
arrow-array = { version = "56.2.0" }
arrow-schema = { version = "56.2.0" }
async-trait = { version = "0.1.89" }
datafusion = { version = "50.2" }
futures = { version = "0.3.31" }
geoarrow-array = "0.6.1"
geoarrow-schema = "0.6.1"
object_store = { version = "0.12.4" }
thiserror = "2"
zarrs = { version = "0.22.4", features = ["async", "chrono"] }
zarrs_filesystem = { version = "0.3.2" }
zarrs_object_store = { version = "0.5.0" }
zarrs_storage = { version = "0.4.0", features = ["async"] }
zarrs_metadata = "0.6.1"

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
zarrs_metadata = { git = "https://github.com/zarrs/zarrs", rev = "6ea0464cf50e481cbae0e89de267c7991ed65f3f" }
