[project]
name = "zarr-datafusion-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.3.2",
  "shapely>=2.1.1", 
  "icechunk",
  "zarr @ git+https://github.com/zarr-developers/zarr-python.git@main"
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
