[package]
name = "zarr-datafusion-search-python"
version = "0.1.0"
edition = "2024"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
description = "Python bindings for zarr-datafusion-search"
readme = "README.md"
# repository = "https://github.com/datafusion-contrib/datafusion-geo"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.85"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[features]

[dependencies]
datafusion-ffi = "50"
pyo3 = { version = "0.26", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
pyo3-object_store = "0.6"
zarr-datafusion-search = { path = "../" }
zarrs_metadata = "0.6.1"

[patch.crates-io]
zarrs_metadata = { git = "https://github.com/zarrs/zarrs", rev = "6ea0464cf50e481cbae0e89de267c7991ed65f3f" }
