[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "zarr_datafusion_internal"
requires-python = ">=3.9"
dependencies = ["datafusion"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "zarr_datafusion_internal._rust"
python-source = "python"

[tool.uv]
dev-dependencies = ["ipykernel"]
